# fieldtrip

./: .codespellignorelines  .codespellrc  .editorconfig  .fieldtrip2fiff.m.swp  .gitattributes  .gitignore  .travis.yml  CITATION.cff  Contents.m  Makefile  PARALLEL.md  README  README.md  analysisprotocol.m  appenddata.m  appendspike.m  artifact_clip.m  artifact_ecg.m  artifact_eog.m  artifact_file.m  artifact_jump.m  artifact_manual.m  artifact_muscle.m  artifact_threshold.m  artifact_zvalue.m  besa2fieldtrip.m  bis2fieldtrip.m  channelcombination.m  channelrepair.m  channelselection.m  clusterplot.m  clusterrandanalysis.m  combineplanar.m  componentanalysis.m  componentbrowser.m  connectivityanalysis.m  connectivitysimulation.m  data2bids.m  databrowser.m  definetrial.m  (+369 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
@config/: access.m  cleancfg.m  config.m  display.m  fieldnames.m  isfield.m  rmfield.m  struct.m  struct2cell.m  subsasgn.m  subsref.m
@uint64/: abs.c  abs.m  abs.mexa64  all.m  any.m  compile.m  diff.m  max.mexmac  max.mexmaci  min.c  min.mexmaci  min.mexw32  minus.mexmaci  plus.c  plus.mexw32  rdivide.mexmac  rdivide.mexmaci  test.m  times.mexglx  times.mexmaci  times.mexw32
JOSS/: paper.bib  paper.md
classification/: Contents.m  README
compat/: checkconfig.m  fetch_header.m  fieldtripdefs.m  ft_artifact_manual.m  ft_convert_grad.m  ft_databrowser_old.m  ft_freqanalysis_convol_old.m  ft_freqanalysis_mtmconvol_old.m  ft_freqanalysis_mtmfft_old.m  ft_freqanalysis_mtmwelch_old.m  ft_freqanalysis_mvar_old.m  (+26 more)
realtime/buffer/src/: CMakeLists.txt  Makefile  Makefile.mak  Makefile_BCC  buffer.h  cleanup.c  clientrequest.c  compiler.h  dmarequest.c  endianutil.c  extern.c  extern.h  gettimeofday.h  libbuffer.bpr  libbuffer.sln  libbuffer.vcproj  libbuffer_Exp2005.sln  libbuffer_Exp2005.vcproj  libbuffer_Exp2008.vcproj  message.h  platform.h  platform_includes.h  printstruct.c  property.c  rdadefs.h  rdaserver.c  rdaserver.h  socket_includes.h  socketserver.c  socketserver.h  swapbytes.c  tcprequest.c  tcpserver.c  tcpsocket.c  unix_includes.h  util.c
realtime/buffer/src/win32/: gettimeofday.c  gettimeofday.h
(+6395 files in other folders)
